--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <title>Colmar Academy</title>
 
-    <link rel="stylesheet" href= "C:/Users/mindy/Desktop/HTML projects/colmar-academy/style.css">
+    <link rel="stylesheet" href= "colmar-academy/style.css">
 
   </head>
   <body>
